repos/makepy/contents/test/fail/IfWeirdCondition.rules
if a b:
    x = y

all: if
